docs/i18n/sv/docusaurus-plugin-content-docs/version-1.3/shortcuts.md
---
title: "Genvägar"
sidebar_position: 2
---

Det finns några genvägar som du kan använda i editorn. Några av dem är skrivna under knapparna.

## Allmänt

* `Ctrl` + `N`: Ny fil
* `Ctrl` + `Shift` + `N`: Ny fil från mall
* `Ctrl` + `O`: Öppna filen
* `Ctrl` + `I`: Importera fil
* `Ctrl` + `E`: Exportera fil
* `Ctrl` + `Shift` + `E`: Exportera filen som bild
* `Ctrl` + `Alt` + `E`: Exportera filen som svg
* `Ctrl` + `Alt` + `S`: Öppna inställningar

## Projekt

* `Ctrl` + `Z`: Ångra
* `Ctrl` + `Y`: Gör om
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Öppna projektinställningar
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Öppna färgpaletten
* `Ctrl` + `B`: Öppna bakgrundsdialogrutan
* `Ctrl` + `Shift` + `A`: dialogrutan Öppna områden
* `Ctrl` + `L`: Öppna lager dialog
* `Ctrl` + `S`: Spara
* `Alt` + `S`: Ändra sökväg
