docs/i18n/sv/docusaurus-plugin-content-docs/version-1.5/shortcuts.md
---
title: "Genvägar"
sidebar_position: 2
---


## Keyboard

Det finns några genvägar som du kan använda i editorn. Några av dem är skrivna under knapparna.

### Allmänt

* `Ctrl` + `N`: Ny fil
* `Ctrl` + `Shift` + `N`: Ny fil från mall
* `Ctrl` + `O`: Öppna filen
* `Ctrl` + `I`: Importera fil
* `Ctrl` + `E`: Exportera fil
* `Ctrl` + `Shift` + `E`: Exportera filen som bild
* `Ctrl` + `Alt` + `E`: Exportera filen som svg
* `Ctrl` + `Alt` + `S`: Öppna inställningar

### Projekt

* `Ctrl` + `Z`: Ångra
* `Ctrl` + `Y`: Gör om
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Öppna projektinställningar
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Öppna färgpaletten
* `Ctrl` + `B`: Öppna bakgrundsdialogrutan
* `Ctrl` + `Shift` + `A`: dialogrutan Öppna områden
* `Ctrl` + `L`: Öppna lager dialog
* `Ctrl` + `S`: Spara
* `Alt` + `S`: Ändra sökväg
* `Ctrl` + (`1` - `0`): Växla till målare

## Stylus

* `Primär knapp`: Ändra till handverktyg
* `Sekundär knapp`: Ändra till andra målare

## Konfigurera {#configure}

Anpassa kontrollerna genom att ge varje kontroll en målare index. Målarindexet börjar vid 1 och beställs från vänster till höger. En tom målare index kommer att inaktivera målare slå på den här kontrollen. Infoga `0` för att aktivera flyttning med denna kontroll.
